client/styles/NavBar.module.css
.navbar {
  width: 100%;
  /*color: white;*/
  font-family: sans-serif;
  /*background-color: #212427;*/
  margin-bottom: 50px;
  box-shadow: rgba(0, 0, 0, 0.075) 0 1px;
}

.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 60px;
  padding: 0 80px;
}

.logo img {
  position: relative;
  top: 3px;
  width: 120px;
}

.nav_links {
  display: flex;
  align-items: center;
  list-style: none;
  font-size: 14px;
}

.nav_links .divider {
  display: block;
  height: 30px;
  width: 1px;
  margin-left: 20px;
  position: relative;
  background: rgba(0, 0, 0, 0.2);
}

.nav_item > a,
.nav_item span,
.nav_item .dropdown {
  display: inline-block;
  margin-left: 20px;
  text-decoration: none;
  transition: color 0.2s;
}

.nav_item.active,
.nav_item .dropdown_items a.active {
  color: #6200ee;
}

.nav_item span:hover,
.nav_item .dropdown:hover,
.nav_item .button {
  cursor: pointer;
  color: #6200ee;
}

.nav_item .button {
  margin-left: 20px;
  padding: 10px 10px;
  border-radius: 4px;
  background-color: #6200ee;
  color: white;
  transition: all 0.2s ease-in-out;
}

.nav_item .button:hover {
  transform: scale(1.1);
}

.nav_item .dropdown {
}

.nav_item .dropdown .dropdown_btn {

}

.nav_item .dropdown_items {
  display: flex;
  justify-content: left;
  align-items: center;
  position: absolute;
  background-color: #ffffff;
  min-width: 145px;
  border: 1px solid rgba(0,0,0,0.075);
  border-radius: 4px;
  top: 50px;
  z-index: 1;
}

.nav_item .dropdown:not(.active) .dropdown_items,
.nav_item .dropdown:not(.active) .arrow,
.nav_item .dropdown:not(.active) .arrow_back {
  display: none;
}

.nav_item .dropdown_items a {
  display: block;
  padding: 12px 16px;
  text-align: left;
  text-decoration: none;
}

.nav_menu {
  position: absolute;
  display: none;
  right: 30px;
  top: 21px;
  font-size: 20px;
}

.nav_menu:hover {
  cursor: pointer;
}

.dropdown .arrow,
.dropdown .arrow_back {
  position: absolute;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 10px solid #ffffff;

  top: 41px;
  right: 265px;
  z-index: 2
}

.dropdown .arrow_back {
  border-bottom: 10px solid rgba(0,0,0,0.6);
  z-index: 1
}

@media (max-width: 600px) {
  .container {
    display: block;
    padding: 0;
  }

  .container.active {
    height: auto;
  }

  .logo {
    position: relative;
    display: block;
    margin-bottom: 36px;
    top: 18px;
    margin-left: 30px;
  }

  .logo img {
    width: 100px;
  }

  .nav_links.open {
    display: block;
    width: 100%;
    background-color: #f3effa;
  }

  .nav_links:not(.open) {
    display: none;
  }

  .nav_item {
    padding: 10px 0;
  }

  .nav_item.div {
    display: none;
  }

  .nav_item a,
  .nav_item span,
  .navbar .button,
  .navbar .dropdown {
    font-size: 16px;
    margin-left: 0;
    padding-left: 10px;
  }

  .nav_item.btn {
    padding: 0;
  }

  .nav_item .button {
    border-radius: 0;
  }

  .nav_item .button:hover {
    transform: scale(1);
  }

  .nav_item .dropdown_items {
    position: static;
    display: block;
  }

  .nav_item .dropdown_items {
    position: static;
    display: block;
    background-color: transparent;
    border: none;
  }

  .nav_item .dropdown_items a {
    padding-bottom: 0;
  }

  .nav_menu {
    display: inline-block;
  }
}

